# Tarea-03-BD

./: .gitignore  README.md
api/: Cargo.toml
api/src/: audit.rs  config.rs  db.rs  error.rs  main.rs  procedures.rs  sessions.rs  state.rs
api/src/handlers/: admin.rs  auth.rs  employee.rs  mod.rs  simulation.rs
api/src/models/: mod.rs  user.rs
api/src/repository/: admin.rs  auth.rs  employee.rs  simulation.rs
api/src/routes/: admin.rs  auth.rs  employee.rs  mod.rs  simulation.rs  users.rs
api/src/services/: auth.rs
docker/: CatalogoErrores.txt  SP_CargarCatalogosXML.sql  SP_ConsultarPlanillasMensuales.sql  SP_ConsultarPlanillasSemanales.sql  SP_EditarEmpleado.sql  SP_EliminarEmpleado.sql  SP_InsertarBitacora.sql  SP_InsertarEmpleado.sql  SP_ListarEmpleados.sql  SP_ListarEmpleadosConFiltro.sql  SP_ObtenerDetalleAsistenciasSemanales.sql  SP_ObtenerDetalleDeduccionesMensuales.sql  SP_ObtenerDetalleDeduccionesSemanales.sql  SP_ProcesarFechaOperacion.sql  SP_ValidarUsuario.sql  docker-compose.yml  init_db.sql  load_datos.sql  load_operaciones.sql  load_xml.sql  main.py  triggers.sql
docker/stored_procedures/: SP_ConsultarPlanillasMensuales.sql  SP_ConsultarPlanillasSemanales.sql  SP_EditarEmpleado.sql  SP_EmpXTipoDed.sql  SP_Empleado.sql  SP_InsertarBitacora.sql  SP_InsertarEmpleado.sql  SP_ListarEmpleados.sql  SP_ObtenerDetalleAsistenciasSemanales.sql  SP_ObtenerDetalleDeduccionesMensuales.sql  SP_ObtenerDetalleDeduccionesSemanales.sql  SP_ObtenerHorarioEmpleadoSemana.sql  SP_Puesto.sql  SP_Usuario.sql  SP_ValidarUsuario.sql
website/: README.md  package-lock.json  package.json
(+14 files in other folders)
