[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-server = "0.8" 
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx-core = { version = "0.7.4", features = ["_rt-tokio"] }
welds-sqlx-mssql = "1.7.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # For error handling
dotenvy = "0.15" # Load .env files