[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
tiberius = { version = "0.12.3", features = ["sql-browser-tokio"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0" # For error handling
dotenvy = "0.15" # Load .env files
uuid = { version = "1.0", features = ["v4", "serde"] }
